--- a/content/themes/dude/sass/features/_vimeo-iframe-wrapper.scss
+++ b/content/themes/dude/sass/features/_vimeo-iframe-wrapper.scss
@@ -7,10 +7,6 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100vw;
-
-  @media (max-height: 900px) {
-    top: 20%;
-  }
 }
 
 .vimeo-iframe-wrapper {
